Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0, 5.4.1, 5.6.0, 5.9.1, 5.9.2, 5.10.1, 5.11.2, 5.12.0 Beta 1, 5.12.0 Beta 2
-
Desktop Linux 64bit Ubuntu 14.10, nvidia geforce 560M
KDE Neon 16.04
-
b8a85408d943bffba403d783b9082bd279460bed (qt/qtdeclarative/dev)
Description
Using XAnimator or YAnimator inside a transition in a view such as ListView may cause a crash if the frequency of inserting and removing items from the model is high enough. It's easy to reproduce.
Other animators such as OpacityAnimator or ScaleAnimator don't seem to have any effect at all when used in the transition.
Tested with a threaded render loop. The crash occurs in the main gui thread.
Test application is attached.
Example:
ListView { anchors.top: parent.top anchors.left: parent.left anchors.bottom: parent.bottom anchors.right: parent.horizontalCenter model: testClass add: Transition { NumberAnimation { property: "scale"; from: 0; to: 1; duration: 500 } NumberAnimation { property: "opacity"; from: 0; to: 1; duration: 500 } } displaced: Transition { YAnimator { duration: 500 } // <<--- BIG BANG! // Animation alternative: //NumberAnimation { property: "y"; duration: 500; } NumberAnimation { property: "opacity"; to: 1.0 } NumberAnimation { property: "scale"; to: 1.0 } } remove: Transition { NumberAnimation { property: "opacity"; to: 0; duration: 500 } NumberAnimation { property: "scale"; to: 0; duration: 500 } } delegate: viewDelegate }
Attachments
Issue Links
- relates to
-
QTBUG-37977 Crashes in QQuickTransitionManager::cancel()
-
- Closed
-
-
QTBUG-76433 X/Y animator crashed while fast flicking in the middle of transitions
-
- Closed
-
-
QTBUG-90401 Heap-use-after-free in QAbstractAnimationJob
-
- Closed
-